src/test/ui/span/regions-infer-borrow-scope-within-loop.stderr
error[E0597]: `*x` does not live long enough
  --> $DIR/regions-infer-borrow-scope-within-loop.rs:24:21
   |
LL |         y = borrow(&*x);
   |                     ^^ borrowed value does not live long enough
...
LL |     }
   |     - `*x` dropped here while still borrowed
LL |     assert!(*y != 0);
LL | }
   | - borrowed value needs to live until here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0597"
